# convei-research-affinity-atlas

./: 1_embedding_pipeline.py  Dockerfile  README.md  TODO.txt  abstract_classifier.py  affiliation_classifier.py  affiliation_tag_analysis.py  afl.txt  author_affiliation_trainer.py  author_affilliation_topic_map.py  convei_abstracts_research_assistant.py  pyproject.toml  research_connections_and_gaps.py  scrub_scopus.py  topic_map.py  train_abstract_classifier.py
archive/: abstract_classifier.py  affiliation_classifier.py  afl.txt  author_affilliation_topic_map.py  classified_afl_bck_university_2023_11_30_ATEeDBQJQ-G-wA.txt  research_connections_and_gaps.py  scrub_scopus.py  tester.py  topic_map.py
data/: abstract_tags.txt  affiliation_tags.txt  classified_affiliations.txt
data/web_of_science_query/: README.rst
data/web_of_science_query/abstracts_2023_11_02/: savedrecs (10).ris  savedrecs (100).ris  savedrecs (11).ris  savedrecs (12).ris  savedrecs (13).ris  savedrecs (14).ris  savedrecs (15).ris  savedrecs (16).ris  savedrecs (17).ris  savedrecs (18).ris  savedrecs (19).ris  savedrecs (20).ris  savedrecs (21).ris  savedrecs (22).ris  savedrecs (23).ris  savedrecs (24).ris  savedrecs (25).ris  savedrecs (26).ris  savedrecs (27).ris  savedrecs (28).ris  savedrecs (29).ris  savedrecs (30).ris  savedrecs (31).ris  savedrecs (32).ris  savedrecs (33).ris  savedrecs (34).ris  savedrecs (35).ris  savedrecs (36).ris  savedrecs (37).ris  savedrecs (38).ris  (+70 more)
src/: crawler.py  database.py  llm_analyzer.py  models.py  parser.py  scraper.py  vectorizer.py
src/app/: main.py
(+1 files in other folders)
