[tool.poetry]
name = "academic_affinity_atlas"
version = "0.0.0" # placeholder, dynamically updated
description = "Map people and how related they are academically."

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110"
uvicorn = {extras = ["standard"], version = "^0.29"}
sqlalchemy = "^2.0"
requests = "^2.32"
beautifulsoup4 = "^4.12"
jinja2 = "^3.1"
openai = "^1.14"
sentence-transformers = "^2.7"
faiss-cpu = "^1.8"
python-dotenv = "^1.0"
python-multipart ="^0.0.9"
playwright = "^1.44"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1"
pytest-cov = "^5.0"
black = "^24.4"
flake8 = "^7.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
